<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white" />
    <!--
    app:navigationIcon="@mipmap/lg"
    style="@style/Toolbar.MyStyle"
    app:titleTextAppearance="@style/Toolbar.TitleText"
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@mipmap/ic_launcher" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#666666" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#333333"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/photo_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="60dp"
                android:layout_weight="2"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/photo_name_text_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="60dp"
                android:layout_weight="2"
                android:textColor="#ffffff"
                android:visibility="gone" />

            <TextView
                android:id="@+id/photo_date_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/edit_button"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:onClick="onEditClick"
                android:text="Edit"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:onClick="onSaveClick"
                android:text="Save"
                android:textColor="#ffffff"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#333333"
            android:orientation="horizontal">

            <Button
                android:id="@+id/left_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:onClick="onLeftClick"
                android:text="Left"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/snap_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:onClick="onSnapClick"
                android:text="SNAP"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/right_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:onClick="onRightClick"
                android:text="Right"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>